# AIDE

./: .gitignore  README.md  galaxy.md  pyproject.toml
.claude/: settings.json
aide/: cli.py  integration.py  judge.py  manager.py  models.py  planner.py  taskbox.py  worker.py  workspace.py
aide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aide/providers/: __init__.py  anthropic.py  google.py  openai.py  perplexity.py
docs/superpowers/plans/: 2026-05-07-bare-mode-plan.md  2026-05-07-galaxy-implementation.md  2026-05-07-llm-agnostic-plan.md  2026-05-07-variant-judge-plan.md  2026-05-08-aide-perf-ux.md
docs/superpowers/specs/: 2026-05-07-bare-mode-design.md  2026-05-07-galaxy-design.md  2026-05-07-llm-agnostic-design.md  2026-05-07-variant-judge-design.md
galaxy/: cli.py  integration.py  manager.py  planner.py  taskbox.py  workspace.py
tests/: conftest.py  test_cli.py  test_integration.py  test_judge.py  test_manager.py  test_models.py  test_planner.py  test_providers_anthropic.py  test_providers_google.py  test_providers_init.py  test_providers_openai.py  test_providers_perplexity.py  test_taskbox.py  test_worker.py  test_workspace.py
