
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aide"
version = "0.2.0"
description = "CAID multi-agent AI orchestrator using git worktrees"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
aide = "aide.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0"]
google = ["google-generativeai>=0.8"]
all = ["openai>=1.0", "google-generativeai>=0.8"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
